[gd_scene load_steps=17 format=2]

[ext_resource path="res://media/textures/mixedsets/metal/mtl_wall02_c.png" type="Texture" id=1]
[ext_resource path="res://levels/scenery/Elevator.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://media/textures/mixedsets/metal/mtl_O_c.png" type="Texture" id=4]
[ext_resource path="res://media/sounds/ui_fx/MESSAGE-B_Accept.wav" type="AudioStream" id=5]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 1 )
uv1_scale = Vector3( 0.1, 0.1, 0.1 )
uv1_triplanar = true

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 5, 20, 5 )

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( -2.5, 10, 2.5, 2.5, 10, -2.5, 2.5, 10, 2.5, -2.5, 10, -2.5, -2.5, -10, 2.5, 2.5, -10, -2.5, 2.5, -10, 2.5, -2.5, -10, -2.5, 2.5, 10, 2.5, -2.5, 10, -2.5, 2.5, 10, -2.5, -2.5, 10, 2.5, 2.5, -10, 2.5, -2.5, -10, -2.5, 2.5, -10, -2.5, -2.5, -10, 2.5, 2.5, 10, 2.5, -2.5, -10, 2.5, -2.5, 10, 2.5, 2.5, -10, 2.5, 2.5, 10, -2.5, -2.5, -10, -2.5, -2.5, 10, -2.5, 2.5, -10, -2.5 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.423529, 0.423529, 0.423529, 1 )
albedo_texture = ExtResource( 4 )
uv1_scale = Vector3( 3, 2, 2 )

[sub_resource type="CubeMesh" id=5]
material = SubResource( 4 )
size = Vector3( 3, 0.5, 2 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 1.06029, 1.4454, 0.600855 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.54902, 0.945098, 0.188235, 1 )
emission_enabled = true
emission = Color( 0, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="CubeMesh" id=8]
material = SubResource( 7 )
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="SpatialMaterial" id=9]
albedo_texture = ExtResource( 3 )
emission_enabled = true
emission = Color( 0.027451, 0.027451, 0.109804, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
uv1_scale = Vector3( 3, 2, 2 )

[sub_resource type="CubeMesh" id=10]
material = SubResource( 9 )
size = Vector3( 1.3, 0.2, 1.3 )

[sub_resource type="ConvexPolygonShape" id=11]
points = PoolVector3Array( -1.5, 0.25, 1, 1.5, 0.25, -1, 1.5, 0.25, 1, -1.5, 0.25, -1, -1.5, -0.25, 1, 1.5, -0.25, -1, 1.5, -0.25, 1, -1.5, -0.25, -1, 1.5, 0.25, 1, -1.5, 0.25, -1, 1.5, 0.25, -1, -1.5, 0.25, 1, 1.5, -0.25, 1, -1.5, -0.25, -1, 1.5, -0.25, -1, -1.5, -0.25, 1, 1.5, 0.25, 1, -1.5, -0.25, 1, -1.5, 0.25, 1, 1.5, -0.25, 1, 1.5, 0.25, -1, -1.5, -0.25, -1, -1.5, 0.25, -1, 1.5, -0.25, -1 )

[node name="Elevator" type="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5, 0 )
mode = 1
mass = 0.00102041
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Top_pos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )

[node name="Bottom_pos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Button" type="StaticBody" parent="." groups=[
"Keypad",
]]

[node name="Button" type="MeshInstance" parent="Button" groups=[
"Keypad",
]]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 3.82706, 0, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="Area" type="Area" parent="Button/Button"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -4.4712e-08, -1.02289, 0 )

[node name="CollisionShape" type="CollisionShape" parent="Button/Button/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.28908, 0, 0 )
shape = SubResource( 6 )

[node name="button" type="MeshInstance" parent="Button/Button"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.613055, -0.255519, 0.45212 )
mesh = SubResource( 8 )
material/0 = null

[node name="button2" type="MeshInstance" parent="Button/Button"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.613055, -0.255519, -0.439103 )
mesh = SubResource( 8 )
material/0 = null

[node name="button3" type="MeshInstance" parent="Button/Button"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.06345, -0.255519, 0.45212 )
mesh = SubResource( 8 )
material/0 = null

[node name="button4" type="MeshInstance" parent="Button/Button"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.06345, -0.255519, -0.439103 )
mesh = SubResource( 8 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="Button/Button"]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.375879, -0.160222, -0.0140927 )
mesh = SubResource( 10 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Button"]
transform = Transform( -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 3.82706, 0, 0 )
shape = SubResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 3.71

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="Button/Button/Area" to="." method="_on_Area_body_entered"]
